completato front